Fix the post dialog.

--- a/src/app/_post-dialog.component.html
+++ b/src/app/_post-dialog.component.html
@@ -50,7 +50,7 @@
     <button
             *ngIf='page'
             md-button
-            [disabled]='!ressource'
+            [disabled]='!ressource && !text'
             (click)='post()'
             color='primary'>
         Post erstellen
