Fix posting for now.
Since creating a Video does (in violation of the spec) not return the id
of the associated Post, I had to reimplement instantly showing the new
post using the nuclear option of reloading everything.

--- a/src/app/_post-dialog.component.html
+++ b/src/app/_post-dialog.component.html
@@ -9,7 +9,7 @@
                 placeholder="Schreib etwas...">
         </textarea>
     </md-input-container>
-    <md-tab-group (selectedIndex)='selectedIndex' dynamicHeight>
+    <md-tab-group [(selectedIndex)]='selectedIndex' dynamicHeight>
         <md-tab>
             <ng-template md-tab-label>
                 <md-icon>insert_link</md-icon>
