Add local refreshing.

--- a/src/app/_layout.component.html
+++ b/src/app/_layout.component.html
@@ -33,8 +33,8 @@
                         mdTooltip="Neu laden"
                         mdTooltipShowDelay='1500'
                         mdTooltipHideDelay='1500'
-                        (click)='fbService.clearCache()'
-                        (click)='appRoutingService.refresh()'>
+                        (click)='fbService.clearCache([params.post])'
+                        (click)='appRoutingService.refresh([appService.POST])'>
                     <md-icon>refresh</md-icon>
                 </button>
                 <a
@@ -72,13 +72,14 @@
             <span class='app-toolbar-title'>{{title.getTitle()}}</span>
             <span class='app-toolbar-filler'></span>
             <button
+                    *ngIf='params.profile'
                     md-button
                     class='app-icon-button'
                     mdTooltip="Neu laden"
                     mdTooltipShowDelay='1500'
                     mdTooltipHideDelay='1500'
-                    (click)='fbService.clearCache()'
-                    (click)='appRoutingService.refresh()'>
+                    (click)='fbService.clearCache([params.profile])'
+                    (click)='appRoutingService.refresh([appService.PROFILE])'>
                 <md-icon>refresh</md-icon>
             </button>
             <button
@@ -96,7 +97,7 @@
                     mdTooltip="Facebook"
                     mdTooltipShowDelay='1500'
                     mdTooltipHideDelay='1500'
-                    href='//facebook.com/{{params.page}}'
+                    href='//facebook.com/{{params.profile}}'
                     target='_blank'>
                 <md-icon>open_in_browser</md-icon>
             </a>
