Make use of page.likes.

--- a/src/app/_profile.component.html
+++ b/src/app/_profile.component.html
@@ -8,7 +8,7 @@
                 <span *ngIf='profile.fan_count'>
                     <br>
                     <span
-                            mdTooltip="Likes"
+                            [mdTooltip]='likeTooltip(profile)'
                             mdTooltipShowDelay='1500'
                             mdTooltipHideDelay='1500'>
                         <span class='text-primary'>
