--- a/src/app/_post.component.html
+++ b/src/app/_post.component.html
@@ -23,7 +23,7 @@
         </span>
         <span>
             <span
-                    mdTooltip="Likes"
+                    [mdTooltip]='post.likeTooltip'
                     mdTooltipShowDelay='1500'
                     mdTooltipHideDelay='1500'>
                 <span class='text-primary'>
@@ -34,7 +34,7 @@
                 </span>
             </span>
             <span
-                    mdTooltip="Shares"
+                    [mdTooltip]='post.shareTooltip'
                     mdTooltipShowDelay='1500'
                     mdTooltipHideDelay='1500'>
                 <span class='text-primary'>
