Start yet another big refactor.

--- a/src/app/_app.component.html
+++ b/src/app/_app.component.html
@@ -1,6 +1,8 @@
 <!-- HTML template for the AppComponent -->
 <layout>
-    <nav app-content></nav>
+    <nav app-content>
+        <pages></pages>
+    </nav>
     <aside app-content>
         <post *appRouting='appService.POST'></post>
         <no-detail *appRouting></no-detail>
