--- a/src/app/main/dashboard.component.scss
+++ b/src/app/main/dashboard.component.scss
@@ -9,7 +9,7 @@
  * _dashboard.component partial, to keep things easier to restructure.
  */
 
-@import 'mixins';
-@import 'colors';
+@import '../mixins';
+@import '../colors';
 @import '_dashboard.component';
 
