--- a/src/app/aside/aside.component.scss
+++ b/src/app/aside/aside.component.scss
@@ -9,7 +9,7 @@
  * _aside.component partial, to keep things easier to restructure.
  */
 
-@import 'mixins';
-@import 'colors';
+@import '../mixins';
+@import '../colors';
 @import '_aside.component';
 
