--- a/src/app/main/profile.component.scss
+++ b/src/app/main/profile.component.scss
@@ -9,7 +9,7 @@
  * _profile.component partial, to keep things easier to restructure.
  */
 
-@import 'mixins';
-@import 'colors';
+@import '../mixins';
+@import '../colors';
 @import '_profile.component';
 
