--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -9,7 +9,7 @@
  * _nav.component partial, to keep things easier to restructure.
  */
 
-@import 'mixins';
-@import 'colors';
+@import '../mixins';
+@import '../colors';
 @import '_nav.component';
 
