--- a/src/app/nav/pages.component.scss
+++ b/src/app/nav/pages.component.scss
@@ -9,7 +9,7 @@
  * _pages.component partial, to keep things easier to restructure.
  */
 
-@import 'mixins';
-@import 'colors';
+@import '../mixins';
+@import '../colors';
 @import '_pages.component';
 
