Refactor all the things.

--- a/src/app/aside/comment.component.scss
+++ b/src/app/aside/comment.component.scss
@@ -9,7 +9,7 @@
  * _comment.component partial, to keep things easier to restructure.
  */
 
-@import 'mixins';
-@import 'colors';
+@import '../mixins';
+@import '../colors';
 @import '_comment.component';
 
