--- a/src/app/main/post-dialog.component.scss
+++ b/src/app/main/post-dialog.component.scss
@@ -9,7 +9,7 @@
  * _post-dialog.component partial, to keep things easier to restructure.
  */
 
-@import 'mixins';
-@import 'colors';
+@import '../mixins';
+@import '../colors';
 @import '_post-dialog.component';
 
