--- a/src/app/_layout.component.html
+++ b/src/app/_layout.component.html
@@ -86,7 +86,7 @@
                     mdTooltip="Dashboard"
                     mdTooltipShowDelay='1500'
                     mdTooltipHideDelay='1500'
-                    [appLink]='{profile: null}'>
+                    [appLink]='{master: null}'>
                 <md-icon>dashboard</md-icon>
             </button>
             <a
