--- a/src/app/aside/_detail.component.html
+++ b/src/app/aside/_detail.component.html
@@ -1,4 +1,6 @@
 <!-- HTML template for the DetailComponent -->
 <md-spinner *ngIf='!_loaded' color='accent'></md-spinner>
-<post [profileId]='params.profile' [post]='post | async'></post>
+<div id='detail'>
+    <post [profileId]='params.profile' [post]='post | async'></post>
+</div>
 
