--- a/src/app/main/_page.component.html
+++ b/src/app/main/_page.component.html
@@ -1,6 +1,57 @@
 <!-- HTML template for the PageComponent -->
-<md-spinner color='accent' *ngIf='!page'></md-spinner>
 <div *ngIf='page'>
+    <div>
+        <h1>
+            {{page.name}}
+            <small>
+                <span>
+                    <br>
+                    <span
+                            [mdTooltip]='page.likeTooltip'
+                            mdTooltipShowDelay='1500'
+                            mdTooltipHideDelay='1500'>
+                        <span class='text-primary'>
+                            <md-icon>thumb_up</md-icon>
+                        </span>
+                        <span class='text-accent'>
+                            {{page.fan_count || 0}}
+                        </span>
+                    </span>
+                </span>
+                <span *ngIf='page.talking_about_count'>
+                    <br>
+                    <span
+                            [mdTooltip]='page.talkingAboutTooltip'
+                            mdTooltipShowDelay='1500'
+                            mdTooltipHideDelay='1500'>
+                        <span class='text-primary'>
+                            <md-icon>forum</md-icon>
+                        </span>
+                        <span class='text-accent'>
+                            {{page.talking_about_count}}
+                        </span>
+                    </span>
+                </span>
+                <span *ngIf='page.overall_star_rating'>
+                    <br>
+                    <span
+                            [mdTooltip]='page.ratingTooltip'
+                            mdTooltipShowDelay='1500'
+                            mdTooltipHideDelay='1500'>
+                        <span class='text-primary'>
+                            <md-icon>star</md-icon>
+                        </span>
+                        <span class='text-accent'>
+                            {{page.overall_star_rating}}
+                        </span>
+                        <span class='text-primary'>
+                            (<md-icon>people</md-icon>{{+page.rating_count}})
+                        </span>
+                    </span>
+                </span>
+            </small>
+        </h1>
+    </div>
     <displacer>
         <span class='app-action'>
             <button md-fab (click)='openPostDialog()'>
@@ -102,4 +153,3 @@
         </div>
     </div>
 </div>
-
