--- a/src/app/main/_page.component.html
+++ b/src/app/main/_page.component.html
@@ -51,6 +51,9 @@
                 </span>
             </small>
         </h1>
+        <p *ngIf='page.description'>
+            <em>{{page.description}}</em>
+        </p>
     </div>
     <displacer>
         <span class='app-action'>
