--- a/src/app/main/_profile.component.html
+++ b/src/app/main/_profile.component.html
@@ -51,6 +51,9 @@
                 </span>
             </small>
         </h1>
+        <p *ngIf='profile.description'>
+            <em>{{profile.description}}</em>
+        </p>
     </div>
 </div>
 
