--- a/src/app/main/_posts.component.html
+++ b/src/app/main/_posts.component.html
@@ -35,5 +35,5 @@
         </md-card-footer>
     </profile-card>
 </a>
-<md-spinner color='accent' *ngIf='!_loaded'></md-spinner>
+<md-spinner *ngIf='!_loaded' color='accent'></md-spinner>
 
