--- a/src/app/main/_page.component.html
+++ b/src/app/main/_page.component.html
@@ -69,6 +69,7 @@
                     <md-icon>archive</md-icon>
                 </ng-template>
                 <h2>Posts auf deiner Seite</h2>
+                <md-spinner *ngIf='pending' color='accent'></md-spinner>
                 <posts [posts]='newPosts' loaded='true'></posts>
                 <endless-list #postsHandset [input]='posts'>
                     <posts [posts]='postsHandset.output'></posts>
@@ -105,6 +106,7 @@
                 <div class='flex'>
                     <div class='flex-6-cols'>
                         <h2>Posts auf deiner Seite</h2>
+                        <md-spinner *ngIf='pending' color='accent'></md-spinner>
                         <posts [posts]='newPosts' loaded='true'></posts>
                         <endless-list #postsTablet [input]='posts'>
                             <posts [posts]='postsTablet.output'></posts>
@@ -137,6 +139,7 @@
             <div class='flex'>
                 <div class='flex-4-cols'>
                     <h2>Posts auf deiner Seite</h2>
+                    <md-spinner *ngIf='pending' color='accent'></md-spinner>
                     <posts [posts]='newPosts' loaded='true'></posts>
                     <endless-list #postsDesktop [input]='posts'>
                         <posts [posts]='postsDesktop.output'></posts>
