--- a/src/app/main/_displacer.component.html
+++ b/src/app/main/_displacer.component.html
@@ -1,9 +1,11 @@
 <!-- HTML template for the DisplacerComponent -->
 <ng-template displacer-portal>
-    <div app-content>
-        <div class='displacer-content'>
-            <div class='positioning-anchor'>
-                <ng-content></ng-content>
+    <div>
+        <div app-content>
+            <div class='displacer-content'>
+                <div class='positioning-anchor'>
+                    <ng-content></ng-content>
+                </div>
             </div>
         </div>
     </div>
