--- a/src/app/main/_posts.component.html
+++ b/src/app/main/_posts.component.html
@@ -1,39 +1,43 @@
 <!-- HTML template for the PostsComponent -->
-<a *ngFor='let post of _posts' [appLink]='{post: post.id}'>
-    <profile-card [profile]='post.from'>
-        <img *ngIf='post.picture' md-card-image [src]='post.picture'>
-        <md-card-content>
-            <p>{{post.text}}</p>
-        </md-card-content>
-        <md-card-footer>
-            <div>
-                <p>
-                    <span
-                            [mdTooltip]='post.likeTooltip'
-                            mdTooltipShowDelay='1500'
-                            mdTooltipHideDelay='1500'>
-                        <span class='text-primary'>
-                            <md-icon>thumb_up</md-icon>
-                        </span>
-                        <span class='text-accent'>
-                            {{post.likes.summary.total_count}}
-                        </span>
-                    </span>
-                    <span
-                            [mdTooltip]='post.shareTooltip'
-                            mdTooltipShowDelay='1500'
-                            mdTooltipHideDelay='1500'>
-                        <span class='text-primary'>
-                            <md-icon>share</md-icon>
-                        </span>
-                        <span class='text-accent'>
-                            {{post.shares ? post.shares.count : 0}}
-                        </span>
-                    </span>
-                </p>
-            </div>
-        </md-card-footer>
-    </profile-card>
-</a>
+<div class='flex'>
+    <div *ngFor='let posts of _posts' class='flex-{{cols}}-cols'>
+        <a *ngFor='let post of posts' [appLink]='{post: post.id}'>
+            <profile-card [profile]='post.from'>
+                <img *ngIf='post.picture' md-card-image [src]='post.picture'>
+                <md-card-content>
+                    <p>{{post.text}}</p>
+                </md-card-content>
+                <md-card-footer>
+                    <div>
+                        <p>
+                            <span
+                                    [mdTooltip]='post.likeTooltip'
+                                    mdTooltipShowDelay='1500'
+                                    mdTooltipHideDelay='1500'>
+                                <span class='text-primary'>
+                                    <md-icon>thumb_up</md-icon>
+                                </span>
+                                <span class='text-accent'>
+                                    {{post.likes.summary.total_count}}
+                                </span>
+                            </span>
+                            <span
+                                    [mdTooltip]='post.shareTooltip'
+                                    mdTooltipShowDelay='1500'
+                                    mdTooltipHideDelay='1500'>
+                                <span class='text-primary'>
+                                    <md-icon>share</md-icon>
+                                </span>
+                                <span class='text-accent'>
+                                    {{post.shares ? post.shares.count : 0}}
+                                </span>
+                            </span>
+                        </p>
+                    </div>
+                </md-card-footer>
+            </profile-card>
+        </a>
+    </div>
+</div>
 <md-spinner *ngIf='!_loaded' color='accent'></md-spinner>
 
