--- a/src/app/_styles.scss
+++ b/src/app/_styles.scss
@@ -113,7 +113,7 @@ md-sidenav-container .mat-sidenav-content {
 
 nav, aside, main {
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 md-spinner {
@@ -186,6 +186,7 @@ md-card-footer > *,
     margin-top: 0;
     max-width: 1600px;
     width: 100%;
+    height: 100%;
 }
 
 [app-content] .positioning-anchor * {
