--- a/src/app/main/_profile.component.html
+++ b/src/app/main/_profile.component.html
@@ -1,6 +1,9 @@
 <!-- HTML template for the ProfileComponent -->
 <div *ngIf='profile'>
     <div>
+        <cover-photo [cover]='profile.cover'></cover-photo>
+    </div>
+    <div>
         <h1>
             {{profile.name}}
             <small>
@@ -51,6 +54,8 @@
                 </span>
             </small>
         </h1>
+    </div>
+    <div>
         <p *ngIf='profile.description'>
             <em>{{profile.description}}</em>
         </p>
