Add profile.picture to PageComponent and ProfileComponent.

--- a/src/app/main/_page.component.html
+++ b/src/app/main/_page.component.html
@@ -3,6 +3,7 @@
     <cover-photo [cover]='page.cover'></cover-photo>
     <div>
         <h1>
+            <img [src]='page.picture'>
             {{page.name}}
             <small>
                 <span>
