--- a/src/app/main/_profile.component.html
+++ b/src/app/main/_profile.component.html
@@ -5,6 +5,7 @@
     </div>
     <div>
         <h1>
+            <img [src]='page.picture'>
             {{profile.name}}
             <small>
                 <span *ngIf='profile.fan_count'>
