--- a/src/app/main/_profile.component.html
+++ b/src/app/main/_profile.component.html
@@ -7,7 +7,7 @@
         <h1>
             <img [src]='profile.picture'>
             {{profile.name}}
-            <small>
+            <small *ngIf='isPage'>
                 <span *ngIf='profile.fan_count'>
                     <br>
                     <span
@@ -51,6 +51,34 @@
                         <span class='text-primary'>
                             (<md-icon>people</md-icon>{{+profile.rating_count}})
                         </span>
+                    </span>
+                </span>
+            </small>
+            <small *ngIf='isUser'>
+                <span>
+                    <br>
+                    <span
+                            class='text-accent'
+                            [mdTooltip]='profile.ageTooltip'
+                            mdTooltipShowDelay='1500'
+                            mdTooltipHideDelay='1500'>
+                        {{profile.ageString}}
+                    </span>
+                    <span class='text-primary'>/</span>
+                    <span
+                            class='text-accent'
+                            [mdTooltip]='profile.sexTooltip'
+                            mdTooltipShowDelay='1500'
+                            mdTooltipHideDelay='1500'>
+                        {{profile.sexString}}
+                    </span>
+                    <span class='text-primary'>/</span>
+                    <span
+                            class='text-accent'
+                            [mdTooltip]='profile.locationTooltip'
+                            mdTooltipShowDelay='1500'
+                            mdTooltipHideDelay='1500'>
+                        {{profile.locationString}}
                     </span>
                 </span>
             </small>
