Don't show the dashboard button, when on the dashboard.

--- a/src/app/_layout.component.html
+++ b/src/app/_layout.component.html
@@ -81,6 +81,7 @@
                 <md-icon>refresh</md-icon>
             </button>
             <button
+                    *ngIf='params.profile'
                     md-button
                     class='app-icon-button'
                     mdTooltip="Dashboard"
